--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* global */
+
 a{
   color: white;
   text-decoration: none;
@@ -9,15 +11,7 @@ ul {
 
 body{
   font-family: 'Fredoka', sans-serif;
-font-family: 'Roboto', sans-serif;
-}
-
-/* nav */
-nav {
-  height: 70px;
-  color: white;
-  background-color: #FF6900;
-  margin-bottom: 60px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .flex-box{
@@ -29,29 +23,40 @@ nav {
   width: 80%;
   margin: auto;
 }
+/* / global */
+header{
+  margin-bottom: 60px;
+}
+/* nav */
+nav {
+  height: 100%;
+  color: white;
+  background-color: #FF6900;
+  
+}
 
 .nav-inner{
   justify-content: space-between;
   flex-direction: row;
-  flex-wrap: wrap;
-  
+  padding: 15px 0px 10px 0px;
+  flex-wrap: wrap;  
 }
 
 .nav-inner .categories{
   width: 30%;
   height: 100%;
   flex-direction: row;
-  align-items: center;
   flex-wrap: wrap;
 }
 
 .nav-inner .categories ul{
   width: 100%; 
+  /* align-items: baseline; */
 }
 
 .nav-inner .categories ul li{
-  align-items: baseline;
-  width: 50px;  
+  /* align-items: baseline; */
+  min-width: 50px;  
 }
 
 .nav-inner .logo{
@@ -62,15 +67,14 @@ nav {
 }
 
 #boolean-logo{
-  height: 30px;  
+  height: 100%; 
+  width: 130px; 
 }
 
 .nav-inner .links{
   width: 30%;
-  height: 100%;
-  
-  align-items: center;
-  
+  height: 100%;  
+  align-items: center;  
 }
 
 .nav-inner .links ul{
@@ -98,19 +102,16 @@ main{
 
 .img-card-box{
   flex-direction: column;
-  width: 33%;
-  
+  width: 33%;  
 }
 
 .immagine{
   position: relative;
-  font-size: 0.7em;
-  
+  font-size: 0.7em;  
 }
 
 .immagine:hover .cuore{
   color: red;
-
 }
 
 .immagine img{
@@ -149,8 +150,6 @@ main{
   bottom: 5%;
   left: 17%;
   color: white;
-
-
 }
 
 #last{
@@ -167,13 +166,14 @@ main{
   top: 3%;
   right: 0%;
   font-size: 1.8em;
-
 }
 
 /* /main */
 
+/* footer */
 footer{
-  height: 100px;
+  /* height: 100%; */
+  padding: 15px 0px 15px 0px;
   color: white;
   background-color: #1A1A1A; 
   font-size: 0.8em;
@@ -185,15 +185,18 @@ footer-inner{
 
 .company-details{
   width: 50%;
-  height: 100%;
-  
+  height: 100%;  
   flex-direction: column;
   justify-content: center;
 }
 
 .social-media{
   width: 50%;
+  height: 100%; 
+
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
 }
+
+/* / footer */
