--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,14 @@ main{
   font-size: 1.8em;
 }
 
+.red{
+  color: red;
+}
+
+.striked{
+  text-decoration: line-through;
+}
+
 /* /main */
 
 /* footer */
