--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ ul {
 body{
   font-family: 'Fredoka', sans-serif;
   font-family: 'Roboto', sans-serif;
+  
 }
 
 .flex-box{
@@ -24,14 +25,18 @@ body{
   margin: auto;
 }
 /* / global */
-header{
-  margin-bottom: 60px;
-}
+/* header{
+  
+} */
 /* nav */
 nav {
-  height: 100%;
+  width: 100%;
   color: white;
   background-color: #FF6900;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0px 10px 20px rgba(0,0,0, .3);
+  
   
 }
 
@@ -74,17 +79,20 @@ nav {
 .nav-inner .links{
   width: 30%;
   height: 100%;  
-  align-items: center;  
+  align-items: center; 
+   
 }
 
 .nav-inner .links ul{
   width: 100%;
   flex-direction: row-reverse;
+  gap:5px;
 }
 
 /* / nav */
 /* main */
 main{
+  padding-top: 120px;
   margin-bottom: 60px;
 }
 
@@ -201,7 +209,6 @@ footer-inner{
 .social-media{
   width: 50%;
   height: 100%; 
-
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
